Cleanup some collections construction